devAfrica in Association this 18/06/2024

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -72,7 +72,13 @@
      
     
     }
-  }
+  },
+  "Qui sommes-nous": "Who are we",
+  "Notre histoire": "Our history",
+  "Nos valeurs": "Our values",
+  "Nos valeurs": "Our mission",
+  "Notre vision": "Our vision"
+
     
 
 
