--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -72,5 +72,12 @@
           "formError": "Erreur de soumission du formulaire"
          
         }
-    }
+    },
+    "Qui sommes-nous": "Qui sommes-nous",
+    "Notre histoire": "Notre histoire",
+    "Nos valeurs": "Nos valeurs",
+    "Notre mission": "Notre mission",
+    "Notre vision": "Notre vision"
+    
+
 }
