DevAfrica in association this 20/06/2024

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -76,7 +76,7 @@
   "Qui sommes-nous": "Who are we",
   "Notre histoire": "Our history",
   "Nos valeurs": "Our values",
-  "Nos valeurs": "Our mission",
+  "Notre mission": "Our mission",
   "Notre vision": "Our vision"
 
     
