--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -95,6 +95,10 @@
   "Nombre de follower":"Number of followers",
   "mention":"mention",
   "vue total":"total view",
-  "Les membres de notre équipe":"OUR TEAM MEMBERS"
+  "Les membres de notre équipe":"OUR TEAM MEMBERS",
+  "Pour les dons par carte bancaire ou mobile money, choisissez l'option payer par stripe ou mobile money":"For donations by credit card or mobile money, choose the pay by stripe or mobile money option.",
+  "Stripe":"Stripe",
+  "Payer":"Pay",
+  "Veuillez choisir le mode de paiement" : "Please choose payment method"
 
 }
